--- a/src/main/ozark-frontend/src/app/components/login/login.component.html
+++ b/src/main/ozark-frontend/src/app/components/login/login.component.html
@@ -1,37 +1,90 @@
-<p>login works!</p>
-<ul>
-    <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
-</ul>
+<app-nav></app-nav>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-<form #loginForm = "ngForm" (ngSubmit)="loginSubmit()">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Login Page</title>
+   <!--Made with love by Mutiullah Samim -->
+   
+	<!--Bootsrap 4 CDN-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <!--Fontawesome CDN-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-    <div class="field-wrap">
-      <label>
-        Email Address<span class="req">*</span>
-      </label>
-      <input type="email"
+	<!--Custom styles-->
+	<link rel="stylesheet" type="text/css" href="login.component.css">
+</head>
+<body>
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+				<h3>Sign In</h3>
+				<div class="d-flex justify-content-end social_icon">
+					<span><i class="fab fa-facebook-square"></i></span>
+					<span><i class="fab fa-google-plus-square"></i></span>
+					<span><i class="fab fa-twitter-square"></i></span>
+				</div>
+			</div>
+			<div class="card-body">
+				<form #loginForm = "ngForm" (ngSubmit)="loginSubmit()">
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-user"></i></span>
+						</div>
+            <!-- <input type="text" class="form-control" placeholder="username"> -->
+            <input type="email"
+            placeholder= "Email"
+             class="form-control"
              required="required"
              name = "username"
-             [(ngModel)] = "username" >
-    </div>
-
-    <div class="field-wrap">
-      <label>
-        Password<span class="req">*</span>
-      </label>
-      <input type="password"
+             [(ngModel)] = "username">
+						
+					</div>
+					<div class="input-group form-group">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>
+            <!-- <input type="password" class="form-control" placeholder="password"> -->
+            <input type="password"
+             class="form-control"
+             placeholder="password"
              name="password"
              id="password"
              name = "ngModel"
              required
              [(ngModel)] = "password">
-    </div>
-    <!--<button class="button button-block" routerLink="/userradio">Log In</button>-->
-    <button class = "button button-block" type="submit" [disabled]="!loginForm.valid">Login</button>
-    <p *ngIf = "errorType == 'Not Found'">
+					</div>
+					<div class="row align-items-center remember">
+						<input type="checkbox">Remember Me
+					</div>
+					<div class="form-group">
+            <button type="submit" [disabled]="!loginForm.valid" (click) = "loginSubmit()" class="btn float-right login_btn">Login</button>
+						<!-- <input type="submit" value="Login" class="btn float-right login_btn"> -->
+					</div>
+        </form>
+      </div>
+    <div class="alert alert-danger" role="alert" *ngIf = "errorType == 'Not Found'">
         You don't have an account registered with this email
-    </p>
-    <p *ngIf = "errorType == 'Unauthorized'">
+    </div>
+    <div class="alert alert-danger" role="alert" *ngIf = "errorType == 'Unauthorized'">
         Your password is incorrect
-    </p>
-  </form>
+    </div>
+			<div class="card-footer">
+				<div class="d-flex justify-content-center links">
+					Don't have an account?<a href="#">Sign Up</a>
+				</div>
+				<div class="d-flex justify-content-center">
+					<a href="#">Forgot your password?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</body>
+</html>
