--- a/src/main/ozark-frontend/src/app/components/login/login.component.html
+++ b/src/main/ozark-frontend/src/app/components/login/login.component.html
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 			<div class="card-body">
-				<form #loginForm = "ngForm" (ngSubmit)="loginSubmit()">
+				<form #loginForm = "ngForm">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
