--- a/src/main/ozark-frontend/src/app/components/signup/signup.component.html
+++ b/src/main/ozark-frontend/src/app/components/signup/signup.component.html
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 			<div class="card-body">
-				<form #signUp = "ngForm" (ngSubmit)="signUp()">
+				<form action="/" method="post" #signupForm="ngForm">
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
@@ -102,13 +102,16 @@ name = "username"
 						<input type="checkbox">Remember Me
 					</div>
 					<div class="form-group">
-            <button type="submit" [disabled]="!signUp.valid" (click) = "signUp()" class="btn float-right login_btn">Sign Up</button>
+            <button type="submit" [disabled]="!signupForm.valid || (!checkPasswordsMatch() && confirmPassword != null)" (click) = "signUp(signupForm)" class="btn float-right login_btn">Sign Up</button>
 						<!-- <input type="submit" value="Login" class="btn float-right login_btn"> -->
 					</div>
         </form>
       </div>
     <div class="alert alert-danger" role="alert" *ngIf = "!checkPasswordsMatch() && confirmPassword != null">
         Your passwords dont match
+    </div>
+    <div *ngIf="userExists" class="alert alert-danger" role="alert">
+        Username already exists. Click here to sign in.
     </div>
 			<div class="card-footer">
 				<div class="d-flex justify-content-center links">
